[gd_scene load_steps=20 format=3 uid="uid://ccwc4s7e5nmbf"]

[ext_resource type="Script" path="res://characters/npc/scripts/npc.gd" id="1_0upfg"]
[ext_resource type="Texture2D" path="res://characters/npc/placeholder/sprites/placeholder-Sheet.png" id="2_58pc0"]
[ext_resource type="PackedScene" uid="uid://cfx3wanmlsj0" path="res://general_components/interactable_area/interactable_area.tscn" id="2_mnng2"]
[ext_resource type="PackedScene" uid="uid://cemmf570s8hey" path="res://general_components/dialogue_emitter/dialogue_emitter.tscn" id="3_kdiqa"]
[ext_resource type="Resource" uid="uid://8ctajnr773an" path="res://scenes/test/initial_gameplay_demo/test_dialogue.dialogue" id="5_5k2ni"]
[ext_resource type="PackedScene" uid="uid://c42lqbqc132h4" path="res://ui/player_interface/inventory/inventory.tscn" id="6_3vby5"]
[ext_resource type="Script" path="res://characters/npc/scripts/npc_decision_maker.gd" id="6_s6v0q"]
[ext_resource type="AudioStream" uid="uid://ditl8qeniqaql" path="res://characters/npc/audio_test_npc/audio/sfx/footstep2/walking2-01.wav" id="8_uoq15"]
[ext_resource type="AudioStream" uid="uid://cld8llqyeimph" path="res://characters/npc/audio_test_npc/audio/sfx/footstep2/walking2-02.wav" id="9_lkfsh"]
[ext_resource type="AudioStream" uid="uid://do8lm8o0q0c60" path="res://characters/npc/audio_test_npc/audio/sfx/footstep2/walking2-03.wav" id="10_tvbok"]
[ext_resource type="AudioStream" uid="uid://bnf1hmb47l76v" path="res://characters/npc/audio_test_npc/audio/sfx/footstep2/walking2-04.wav" id="11_2l08e"]
[ext_resource type="AudioStream" uid="uid://cya13gs6pi1hb" path="res://characters/npc/audio_test_npc/audio/sfx/footstep2/walking2-05.wav" id="12_3fhf7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o2g0p"]
size = Vector2(9, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b5w7d"]
size = Vector2(29, 40.5156)

[sub_resource type="Animation" id="Animation_ase62"]
resource_name = "idle"
length = 1.00001
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_240ma"]
resource_name = "run"
length = 0.750013
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.375),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [0.0],
"method": &"play"
}, {
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_wc56y"]
resource_name = "walk"
length = 1.00001
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7, 8, 9, 10, 11]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.125, 0.625),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [0.0],
"method": &"play"
}, {
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h170s"]
_data = {
"idle": SubResource("Animation_ase62"),
"run": SubResource("Animation_240ma"),
"walk": SubResource("Animation_wc56y")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_siovh"]
streams_count = 5
stream_0/stream = ExtResource("8_uoq15")
stream_0/weight = 1.0
stream_1/stream = ExtResource("9_lkfsh")
stream_1/weight = 1.0
stream_2/stream = ExtResource("10_tvbok")
stream_2/weight = 1.0
stream_3/stream = ExtResource("11_2l08e")
stream_3/weight = 1.0
stream_4/stream = ExtResource("12_3fhf7")
stream_4/weight = 1.0

[node name="Npc" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_0upfg")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -16)
texture = ExtResource("2_58pc0")
hframes = 4
vframes = 5
frame = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -15)
shape = SubResource("RectangleShape2D_o2g0p")

[node name="InteractableArea" parent="." instance=ExtResource("2_mnng2")]
position = Vector2(0, -24)

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableArea"]
position = Vector2(0, 9)
shape = SubResource("RectangleShape2D_b5w7d")

[node name="DialogueEmitter" parent="." instance=ExtResource("3_kdiqa")]
position = Vector2(0, -24)
dialogue_resource = ExtResource("5_5k2ni")

[node name="GroundRayCast" type="RayCast2D" parent="."]
position = Vector2(0, -24)
target_position = Vector2(0, 35)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 10.0
path_max_distance = 10.0

[node name="NPCDecisionMaker" type="Node" parent="."]
script = ExtResource("6_s6v0q")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Inventory" parent="CanvasLayer" instance=ExtResource("6_3vby5")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h170s")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_siovh")
max_distance = 160.0
bus = &"SFX"
